[project]
name = "credist-fault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[gdrive]>=3.63.0",
    "kaggle>=1.7.4.5",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "polars-lts-cpu>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "skrub>=0.6.2",
]
